<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_Anasayfa"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_Hayvanlar"
        android:icon="@drawable/hayvanlar"
        android:title="@string/hayvanlar" />
    <item
        android:id="@+id/nav_HayvanSorgula"
        android:icon="@drawable/hayvansorgula"
        android:title="@string/menu_hayvansorgula" />
    <item
        android:id="@+id/nav_GenelNotlar"
        android:icon="@drawable/notlar_ico"
        android:title="@string/notlar" />
    <item
        android:id="@+id/nav_Profil"
        android:icon="@drawable/adsoyad"
        android:title="@string/profile" />

</menu>

